--- a/mysite/mysite/mysite_nginx.conf
+++ b/mysite/mysite/mysite_nginx.conf
@@ -1,5 +1,5 @@
 upstream django {
-    server unix:/home/vboxuser/PycharmProjects/abra1/mysite/mysite.sock;     server 127.0.0.1:8001;
+    server unix:/home/vboxuser/PycharmProjects/abra1/mysite/mysite.sock;
 }
 
 server {
